--- a/page1.html
+++ b/page1.html
@@ -58,17 +58,17 @@
         <div class="overlay"></div>
         <div class="container-fluid">
             <nav>
-                <a class="brand" href="#"><center><img src="assets/images/Picture1.png"></center></a>
-                <ul style="font-size: 0.7rem; font-weight: 600;font-family: 'Open Sans', sans-serif;">
+                <a class="brand" href="#"><center><img src="https://i.ibb.co/0MQkxWm/Picture1.png"></center></a>
+                <ul style=" font-weight: 600;font-family: 'Open Sans', sans-serif;">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">About us</a></li>
                     <li><a href="#">Events</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Team</a></li>
-                    <li><a href="#">updates</a></li>
+                    <li><a href="#">Updates</a></li>
                     
                     <li><a href="#">FAQ</a></li>
-                    <li><a href="#">contact us</a></li>
+                    <li><a href="#">Contact us</a></li>
                 </ul>
             </nav>
         </div>
